--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ exclude:
   - Gemfile
   - Gemfile.lock
 title: "Chris Mlynarski's Portfolio Site"
-url: "http://www.chrismlynarski.com"
+url: "https://www.chrismlynarski.com"
 
